--- a/smartfields/templates/bootstrap3/imagefield.html
+++ b/smartfields/templates/bootstrap3/imagefield.html
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="col-md-9">
     {{ block.super }}
-    {% include 'bootstrap3/layout/help_text_and_errors.html' %}
+    {% include 'bootstrap3/layout/help_text.html' %}
   </div>
   <div class="col-md-3">
     <div id="{{ field.auto_id }}_preview">
@@ -18,5 +18,6 @@
 </div>
 {% endblock %}
 
-{% block help_and_errors %}
+
+{% block help_text %}
 {% endblock %}
