added btn-dlete class to crispy delete btn

--- a/smartfields/templates/bootstrap3/filefield.html
+++ b/smartfields/templates/bootstrap3/filefield.html
@@ -10,7 +10,7 @@
 				Browse
       </span>
       {% if not field.field.required %}
-				<button id="{{ field.auto_id }}_delete" type="button" class="btn" title="Delete"><span class="glyphicon glyphicon-trash"></span></button>
+				<button id="{{ field.auto_id }}_delete" type="button" class="btn btn-delete" title="Delete"><span class="glyphicon glyphicon-trash"></span></button>
       {% endif %}
       <button id="{{ field.auto_id }}_upload" type="button" class="btn btn-success" title="Upload"><span class="glyphicon glyphicon-upload"></span></button>
     </span>
