--- a/smartfields/templates/bootstrap3/filefield.html
+++ b/smartfields/templates/bootstrap3/filefield.html
@@ -27,4 +27,6 @@
       <span class="sr-only">Ready</span>
     </div>
   </div>
+	<ul class="error-list" id="{{ field.auto_id }}_errors_extra">
+	</ul>
 {% endblock %}
