added a css class to preview fields

--- a/smartfields/templates/bootstrap3/imagefield.html
+++ b/smartfields/templates/bootstrap3/imagefield.html
@@ -9,7 +9,7 @@
     {% include 'bootstrap3/layout/help_text.html' %}
   </div>
   <div class="col-md-3">
-    <div id="{{ field.auto_id }}_preview">
+    <div id="{{ field.auto_id }}_preview" class="smartfields-preview">
       {{ field.value.html_tag|safe }}
     </div>
   </div>
